Profile Alignment fix. SCSS tabs.

--- a/css/style.css
+++ b/css/style.css
@@ -410,7 +410,7 @@ p {
     padding: 50px 20px 0px 20px;
   }
   .contact-grid .my-picture {
-    padding: 20px  0px 0px;
+    padding: 20px 0px 0px 0px;
   }
 }
 
