--- a/scss/index.scss
+++ b/scss/index.scss
@@ -257,7 +257,7 @@ p {
   .contact-grid {
     padding: 50px 20px 0px 20px;
     .my-picture {
-      padding: 20px  0px 0px;
+      padding: 20px 0px 0px 0px;
     }
   }
 }
